@@ -1,5 +1,10 @@
 2015-10-24  Natalia Portillo  <claunia@claunia.com>
 
+	* Device/ScsiCommands.cs:
+	  Added SCSI TEST UNIT READY.
+
+2015-10-24  Natalia Portillo  <claunia@claunia.com>
+
 	* Enums.cs:
 	  Added X68k controller command.
 
